[tool.poetry]
name = "rendercad"
version = "0.1.0"
description = ""
authors = ["zach wick <zach@zachwick.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Mako = "^1.1.6"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
rendercad = "rendercad.builder:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
